# pen-pencil-classifier

./: create_augmented_dataset.py  load_processed_dataset.py  pen_pencil_classifier.ipynb  pyproject.toml  train_and_report.py
