[project]
name = "binary-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow>=2.20.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
